<resources>
    <string name="app_name">SaaS</string>
    <string name="bottom_title_read">阅卷</string>
    <string name="bottom_title_user">我的</string>
    <string name="read_task_title">阅卷任务</string>
    <string name="exam_details_title">试卷详情</string>
    <string name="change_password_title">修改密码</string>
    <string name="retrieve_password_title">找回密码</string>
    <string name="all_mechanism">全部机构</string>
    <string name="fill_score_keyboard_title">打分键盘设置</string>
    <string name="keyboard_title">本题分数</string>
    <string name="keyboard_reverse_tips">倒序排列</string>
    <string name="keyboard_join_tips">加入0.5分</string>
    <string name="keyboard_tips">* 点击分数设置打分的分数排序</string>
    <string name="keyboard_sort_title">给分排序</string>
    <string name="keyboard_again_reverse">重新排序</string>
    <string name="keyboard_save">保存</string>
    <string name="start_read_btn">开始阅卷</string>
    <string name="exam_details_organizer_text">组织者: \t\t%s</string>
    <string name="exam_details_date_text">考试时间: \t\t%s</string>
    <string name="exam_details_subject_text">科目: \t\t%s</string>
    <string name="exam_details_text">试卷详情: </string>

    <string name="retrieve_edit_input_user_hint">请输入账号</string>
    <string name="retrieve_edit_input_code_hint">请输入验证码</string>
    <string name="retrieve_fill_user">填写帐号</string>
    <string name="retrieve_verification_user">验证身份</string>
    <string name="retrieve_setting_pw_new">设置新密码</string>
    <string name="retrieve_user_verification_success_toast">该账号身份验证成功，清点击下一步</string>
    <string name="retrieve_user_verification_error_toast">该账号不是合作账号，无法登录</string>
    <string name="retrieve_next_btn">下一步</string>
    <string name="retrieve_pre_btn">返回上一步</string>

    <string name="grade_edit_width_tips">该试题建议横屏阅卷</string>
    <string name="grade_score_title">第%s题</string>
    <string name="grade_score_max_topic">≤%s分</string>
    <string name="grade_grade_setting">添加</string>
    <string name="grade_score_helper_title">使用帮助</string>
    <string name="grade_answer_score_issue">问题卷</string>
    <string name="grade_fill_score_all_true">全对</string>
    <string name="grade_fill_score_all_false">全错</string>
    <string name="grade_score">打分</string>
    <string name="grade_right">√</string>
    <string name="grade_wrong">×</string>
    <string name="grade_unknown">?</string>
    <string name="grade_answer_score_bottom_recycler_text_more">更多</string>
    <string name="grade_answer_score_bottom_recycler_text_more_new">更\n多</string>
    <string name="grade_fill_score_keyboard_title">打分键盘设置</string>
    <string name="grade_dialog_answer_score_title">打分</string>
    <string name="grade_answer_more_60">40–60</string>
    <string name="grade_answer_more_40">20–39</string>
    <string name="grade_answer_more_20">0–19</string>
    <string name="grade_null_data">数据为空</string>
    <string name="grade_submit_success">提交成功</string>
    <string name="grade_score_un_empty">暂无未阅卷</string>
    <string name="grade_score_reduction">还原</string>
    <string name="grade_score_answer_fraction">[第%s题] 满分:%s分</string>
    <string name="grade_score_fill_fraction_no_img">[第%s题] 答案:%s</string>
    <string name="grade_score_tips">请先打分</string>
    <string name="grade_dg_open_next_score_title">是否切换到下一题</string>
    <string name="grade_dg_open_prev_score_title">是否切换到上一题</string>
    <string name="grade_first_no_score_page">已经是第一页了</string>
    <string name="grade_last_no_score_page">已经是最后一页了</string>
    <string name="grade_score_tips_next_title">还有试题未阅,确定要跳转到下一份试题吗?</string>
    <string name="grade_score_tips_prev_title">还有试题未阅,确定要跳转到上一份试题吗?</string>
    <string name="grade_fill_score_dialog_title_tips">范围为1~20</string>
    <string name="grade_score_tips_un_next_title">还存在未批阅试题,是否继续批阅下一份</string>
    <string name="grade_score_tips_un_prev_title">还存在未批阅试题,是否继续批阅上一份</string>
    <string name="grade_annotation_empty_title">暂无批注,是否去添加批注?</string>
    <string name="grade_annotation_text_empty">批注不能为空</string>
    <string name="grade_score_annotation_error">批注文字不能超过十位</string>
    <string name="grade_annotation_unknown">非法字符</string>
    <string name="grade_edit_image_bitmap_tips">请等待图片加载完成</string>
    <string name="grade_edit_image_text_title">添加提示</string>
    <string name="grade_edit_image_text_hint">请输入提示</string>
    <string name="grade_score_annotation">批注</string>
    <string name="grade_fill_score_dialog_title">每屏所显示数量</string>
    <string name="grade_search_dialog_hint">请输入数量(小于等于20)</string>
    <string name="grade_add_success">添加成功</string>
    <string name="grade_delete_success">删除成功</string>
    <string name="grade_add">添加</string>
    <string name="grade_fill_score_detail_title">试题详情</string>
    <string name="grade_answer_score_text_empty_send">分数不能为空</string>
    <string name="grade_edit_image_bitmap_max_count">已超过最大缓存数,如想继续批注请撤销之前的操作</string>
    <string name="grade_score_schedule_suffix">阅卷进度</string>
    <string name="grade_score_schedule_v2">阅卷进度:%s/%s</string>
    <string name="grade_score_percentage_suffix">正确率</string>
    <string name="grade_score_percentage_v2">正确率</string>
    <string name="grade_edit_image_reset_error">还原失败</string>
    <string name="grade_edit_image_text_empty">文字不能为空</string>
    <string name="grade_edit_image_submit_error">分数输入不正确</string>
    <string name="grade_annotation_dialog_delete_content">确认删除这条记录吗?</string>
    <string name="grade_annotation_dialog_title">添加批注</string>
    <string name="grade_annotation_add_dialog_hint">批注</string>
    <string name="grade_submit_success_issues">已标为问题卷</string>
    <string name="grade_next_score_success">已切换至下一题</string>
    <string name="grade_prev_score_success">已切换至上一题</string>
    <string name="score_header_answer_text">查看答案</string>
    <string name="grade_look_title">参考答案</string>
</resources>
