<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/retrieve_pw_root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp.20"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_retrieve_fill_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_pw_verification"
                android:enabled="true"
                android:gravity="start"
                android:padding="@dimen/dp.10"
                android:text="@string/retrieve_fill_user"
                android:textColor="@color/colorWhite" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_retrieve_user_verification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_pw_new"
                android:enabled="false"
                android:gravity="end"
                android:padding="@dimen/dp.10"
                android:text="@string/retrieve_verification_user"
                android:textColor="@color/colorWhite" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_retrieve_setting_pw_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_pw_new"
                android:enabled="false"
                android:gravity="end"
                android:padding="@dimen/dp.10"
                android:text="@string/retrieve_setting_pw_new"
                android:textColor="@color/colorWhite" />
        </LinearLayout>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_retrieve_user_verification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp.10"
            android:layout_marginTop="@dimen/dp.20"
            android:layout_marginEnd="@dimen/dp.10"
            android:hint="@string/retrieve_edit_input_user_hint"
            android:inputType="number"
            android:theme="@style/LoginEditText" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_retrieve_verification_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp.10"
            android:layout_marginTop="@dimen/dp.20"
            android:layout_marginEnd="@dimen/dp.10"
            android:hint="@string/retrieve_edit_input_code_hint"
            android:theme="@style/LoginEditText" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_retrieve_pw_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp.10"
            android:layout_marginTop="@dimen/dp.20"
            android:layout_marginEnd="@dimen/dp.10"
            android:background="@drawable/shape_btn_green"
            android:text="@string/retrieve_next_btn"
            android:textColor="@color/colorWhite" />
    </LinearLayout>


</android.support.v4.widget.NestedScrollView>