<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dp.30">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_exam_details_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:lines="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="高三联合质量评估考试" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_exam_details_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp.20"
        app:layout_constraintStart_toEndOf="@+id/tv_exam_details_title"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="联考" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_exam_details_organizer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:lines="1"
        android:text="@string/exam_details_organizer_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_exam_details_title" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_exam_details_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:lines="1"
        android:text="@string/exam_details_date_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_exam_details_organizer" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_exam_details_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exam_details_subject_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_exam_details_date" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_exam_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exam_details_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_exam_details_subject" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_exam_details_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp.10"
        android:ellipsize="none"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toEndOf="@+id/tv_exam_details"
        app:layout_constraintTop_toBottomOf="@+id/tv_exam_details_subject"
        tools:text="本试卷共20道题，选择题10道，填空题5道题，解答题5道，满分120分" />
</android.support.constraint.ConstraintLayout>